--- a/style.css
+++ b/style.css
@@ -18,13 +18,23 @@ body {
     background-image: url("picture1");
 }
 
+a {
+    color: yellow;
+}
+
+
+
+
 .top-container {
     position: relative;
     max-width: 100%;
     margin: 0 auto;
+   
 }
 
-.top-container img {vertical-align: middle;}
+.top-container img {vertical-align: middle;
+  height: 20px;
+  }
 
 .top-container .content {
     position: absolute;
@@ -32,7 +42,8 @@ body {
     background: rgba(0, 0, 0, 0.5); 
     color: #f1f1f1;
     width: 100%;
-    padding: 20px;
+    padding-bottom: 5px;
+   
 }
 
 .header {
@@ -68,9 +79,11 @@ body {
 }
 
 
+
+
 .header input[type=text] {
     border: 1px solid #ccc; 
-    width: 100%;
+    width: 110px;
 }
 .content {
   padding: 16px;
@@ -154,7 +167,7 @@ body {
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 .footer {
-    background-color: rgb(212, 99, 61);
+    background-color: rgb(147, 83, 58);
     color: #ffffff;
     text-align: center;
     font-size: 12px;
@@ -162,9 +175,6 @@ body {
 }
 
 
-
-
-/* garbage i wrote */
 
 
 .categorii {
@@ -214,7 +224,66 @@ body {
 } 
 
 
-/* garbage stops here */
+
+form {border: 3px solid #f1f1f1;}
+
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+button {
+    background-color:rgb(147, 83, 58);
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
+.cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
+}
+
+.imgcontainer {
+    text-align: center;
+    margin: 24px 0 12px 0;
+}
+
+img.avatar {
+    width: 20%;
+    border-radius: 25px;
+}
+
+.container {
+    
+    padding: 16px;
+}
+
+span.psw {
+    float: right;
+    padding-top: 16px;
+}
+
+
+
+
+
+
+
+
+
 
 /* For mobile phones: */
 [class*="col-"] {
